--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "ts-node main.ts"
+  },
   "dependencies": {
     "@elzup/kit": "4.1.1",
     "@octokit/rest": "^19.0.11"
